*Edge*

* Fixed Base#exists? to check status code as integer [#299 state:resolved] (Wes Oldenbeuving)


*2.1.0 (May 31st, 2008)*

* Fixed response logging to use length instead of the entire thing (seangeo) [#27]

* Fixed that to_param should be used and honored instead of hardcoding the id #11406 [gspiers]

* Improve documentation. [Radar, Jan De Poorter, chuyeow, xaviershay, danger, miloops, Xavier Noria,  Sunny Ripert]

* Use HEAD instead of GET in exists? [bscofield]

* Fix small documentation typo.  Closes #10670 [l.guidi]

* find_or_create_resource_for handles module nesting.  #10646 [xavier]

* Allow setting ActiveResource::Base#format before #site.  [rick]

* Support agnostic formats when calling custom methods.  Closes #10635 [joerichsen]

* Document custom methods.  #10589 [Cheah Chu Yeow]

* Ruby 1.9 compatibility.  [Jeremy Kemper]


*2.0.2* (December 16th, 2007)

* Added more specific exceptions for 400, 401, and 403 (all descending from ClientError so existing rescues will work) #10326 [trek]

* Correct empty response handling.  #10445 [seangeo]


*2.0.1* (December 7th, 2007)

* Don't cache net/http object so that ActiveResource is more thread-safe.  Closes #10142 [kou]

* Update XML documentation examples to include explicit type attributes. Closes #9754 [hasmanyjosh]

* Added one-off declarations of mock behavior [DHH]. Example:

    Before:
      ActiveResource::HttpMock.respond_to do |mock|
        mock.get "/people/1.xml", {}, "<person><name>David</name></person>"
      end
      
    Now:
      ActiveResource::HttpMock.respond_to.get "/people/1.xml", {}, "<person><name>David</name></person>"

* Added ActiveResource.format= which defaults to :xml but can also be set to :json [DHH]. Example:

    class Person < ActiveResource::Base
      self.site   = "http://app/"
      self.format = :json
    end
    
    person = Person.find(1) # => GET http://app/people/1.json
    person.name = "David"